--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -60,6 +60,13 @@ p {
   background-color: $navbar-color;
 }
 
+#logout{
+  cursor:default;
+  &:hover{
+    background-color:transparent;
+  }
+}
+
 #logo {
   float: left;
   margin-right: 10px;
